# action-cam-cli

./: .gitignore  CLAUDE.md  README.md  merge_grade.py  pyproject.toml
.github/workflows/: ci.yml
docs/: PRD-merge-grade.md  PRD-telemetry.md  TESTING.md
docs/adrs/: 0001-modular-src-architecture.md  0002-domain-decomposition.md  0003-gpx-telemetry-pipeline.md  0003-telemetry-pipeline.md
docs/prds/: 0002-telemetry.md
samples/: README.md
src/action_cam_cli/: __init__.py  __main__.py  cli.py
src/action_cam_cli/core/: config.py  discovery.py  errors.py  models.py  probe.py
src/action_cam_cli/grading/: __init__.py  executor.py  ffmpeg.py  merge_grade.py  pipeline.py  sessions.py
src/action_cam_cli/telemetry/: __init__.py  encode.py  models.py  render.py  speed.py  tcx.py
tests/: conftest.py  test_cli.py  test_ffmpeg.py  test_pipeline.py  test_probe.py  test_render.py  test_sessions.py  test_telemetry.py
tests/fixtures/: short_ride.tcx
