[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "action-cam-cli"
dynamic = ["version"]
description = "Merge chaptered DJI Action 4 D-Log M clips and apply a Rec.709 LUT via NVENC."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "tqdm>=4.66",
    "Pillow>=10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
action-cam = "action_cam_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# Single source of truth for the version: src/action_cam_cli/__init__.py.
[tool.setuptools.dynamic]
version = { attr = "action_cam_cli.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# pycodestyle errors, pyflakes, and import sorting.
select = ["E", "F", "I"]
